Sort a few more questions into their papers.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -3417,6 +3417,23 @@
 
 \qpaper{123}{The Early Childhood of Jesus}
 
+\qstart{How old was Jesus when he received his Thought Adjuster?}
+{6 months}{0}
+{3 years}{0}
+{4 years}{1}
+{5 years}{0}
+{10 years}{0}
+{18 years}{0}
+\qstop
+
+\qstart{When did Jesus receive his Thought Adjuster?}
+{1\ts{st} January, 1\,B.C.}{0}
+{10\ts{th} February, 1\,B.C.}{0}
+{11\ts{th} February, 2\,B.C.}{1}
+{21\ts{st} August, 1\,B.C.}{0}
+{21\ts{st} August, 3\,B.C.}{0}
+\qstop
+
 \qstart{Which languages did Jesus speak?}
 {Hebrew}{0}
 {Hebrew \&\ Aramaic}{0}
@@ -3444,6 +3461,18 @@
 \qstop
 
 \qpaper{126}{The Two Crucial Years}
+
+\qstart{How many siblings did Jesus have (including Amos, who died at an early age)?}
+{0}{0}
+{1}{0}
+{2}{0}
+{3}{0}
+{4}{0}
+{5}{0}
+{6}{0}
+{7}{0}
+{8}{1}
+\qstop
 
 \qstart{Which book influenced Jesus to adopt as his inaugural title ``the Son of Man''?}
 {Book of Enoch}{1}
@@ -3526,6 +3555,12 @@
 \qstop
 
 \qpaper{133}{The Return from Rome}
+
+\qstart{In which of Jesus' talks did he say ``Matter and spirit and the state intervening between them are three interrelated and interassociated levels of the true unity of the real universe''?}
+{The Science Discourse}{1}
+{Discourse on Reality}{0}
+{Discourse on Time and Space}{0}
+\qstop
 
 \qstart{Who taught that ``The human mind early begins to manifest qualities which are supermaterial and the truly reflective intellect is not altogether bound by the limits of time''?}
 {The Mystic Cults}{0}
@@ -3739,6 +3774,12 @@
 
 \qpaper{163}{Ordination of the Seventy at Magadan}
 
+\qstart{From whom did Jesus require to give up their wordly goods?}
+{The 12 Apostles and the 70 specially trained gospel preachers}{1}
+{All his disciples}{0}
+{He left the decision to the individual}{0}
+\qstop
+
 \qpaper{164}{At the Feast of Dedication}
 
 \qstart{Which of these were the friends and secret supporters of Jesus?}
@@ -3817,6 +3858,13 @@
 
 \qpaper{182}{In Gethsemane}
 
+\qstart{Prior to Jesus' arrest and in response to Jesus' prayers in the garden of Gethsemane a ... came down by his side and, speaking to him, touched him and strengthened him.}
+{secondary midwayer}{0}
+{primary midwayer}{0}
+{mighty angel}{1}
+{Melchizedek}{0}
+\qstop
+
 \qstart{To whom did Jesus say: ``The spirit is indeed willing, but the flesh is weak''?}
 {Peter}{0}
 {James}{0}
@@ -3831,6 +3879,11 @@
 \qstop
 
 \qpaper{183}{The Betrayal and Arrest of Jesus}
+
+\qstart{Was the torture and murder of Jesus by the Jews part of the Father's will?}
+{yes}{0}
+{no}{1}
+\qstop
 
 \qstart{Who was behind the plan of Jesus' torture and murder?}
 {Lucifer}{0}
@@ -3880,6 +3933,17 @@
 
 \qpaper{187}{The Crucifixion}
 
+\qstart{Which event is described here: ``All of Golgotha was covered by thousands upon thousands of crosses upon which day by day there perished the flower of the Jewish race. A terrible harvest of the seed-sowing of this day [of Jesus' crucifixion]''?}
+{The Roman siege of Jerusalem 40 years after crucificion}{1}
+{The Babylonian siege leading to the Jews captivity}{0}
+\qstop
+
+\qstart{Why did the sky darken from midday on the day of Jesus' crucificion?}
+{God's anger}{0}
+{A hot wind sandstorm from Arabian desert was coming}{1}
+{solar eclipse}{0}
+\qstop
+
 \qstart{Why did Jesus say, whilst on the cross, ``My God, my God, why have you forsaken me''?}
 {He felt abandoned}{0}
 {In his vanishing consciousness he was reciting Psalm 22}{1}
@@ -3890,6 +3954,14 @@
 {06:00 and 12:00}{0}
 {09:00 and 12:00}{0}
 {06:00 and 18:00}{0}
+\qstop
+
+\qstart{How old was Jesus when he was crucified?}
+{30 years}{0}
+{33 years}{0}
+{35 years}{1}
+{36 years}{0}
+{40 years}{0}
 \qstop
 
 \qstart{Give the time of Jesus' crucifixion and the time at which he died}
@@ -3922,11 +3994,73 @@
 {James}{0}
 \qstop
 
+\qstart{Who carried Jesus' body for burial?}
+{Joseph of Arimathea}{1}
+{Nicodemus}{1}
+{John Zebedee}{1}
+{A Roman centurion}{1}
+\qstop
+
 \qpaper{188}{The Time of the Tomb}
+
+\qstart{How many stones were set in front of Jesus' tomb to stop his followers taking his body?}
+{2}{1}
+{7}{0}
+{10}{0}
+{12}{0}
+{24}{0}
+\qstop
+
+\qstart{How many guards were placed around Jesus' tomb?}
+{8 Roman guards}{0}
+{5 Roman guards and 3 Jewish guards}{0}
+{a Roman cohort}{0}
+{a Roman legion}{0}
+{10 Roman soldiers and 10 Jewish guards}{1}
+{12 Roman soldiers and 7 Jewish guards}{0}
+\qstop
 
 \qpaper{189}{The Resurrection}
 
+\qstart{Which of these women returned to Jesus' tomb after Sabbath to properly embalm him?}
+{Mary Magdalene}{1}
+{Mary Alpheus}{1}
+{Salome Zebedee}{1}
+{Joanna}{1}
+{Susanna}{1}
+{Mary the mother of Jesus}{0}
+\qstop
+
+\qstart{Who rolled away Jesus' tombstone?}
+{Secondary Midwayers}{1}
+{The resurrected Jesus}{0}
+{Seraphim}{0}
+{Primary Midwayers}{0}
+{Melchizedeks}{0}
+\qstop
+
+\qstart{What did the guards see immediately after Jesus resurrected? }
+{Nothing but the stone moving by itself}{1}
+{Jesus walking out of the tomb}{0}
+{Mighty angels moving the stone away}{0}
+\qstop
+
+\qstart{Who else was resurrected at the time of Jesus' resurrection?}
+{The two thieves crucified with him}{0}
+{The survivors of the human races since the days of Adam}{1}
+{One of the two thieves crucified with him}{0}
+\qstop
+
 \qpaper{190}{Morontia Appearances of Jesus}
+
+\qstart{How many appearances to mortals in total did Jesus make in morontia form?}
+{0}{0}
+{3}{0}
+{7}{0}
+{12}{0}
+{19}{1}
+{144}{0}
+\qstop
 
 \qstart{Does the morontia body have circulating blood and partake of ordinary material food?}
 {yes}{0}
@@ -3945,6 +4079,11 @@
 \qpaper{193}{Final Appearances and Ascension}
 
 \qpaper{194}{Bestowal of the Spirit of Truth}
+
+\qstart{No special gift was bestowed upon the members of Jesus’ earthly family. Pentecost marked the end of special priesthoods and all belief in sacred families. TRUE or FALSE?}
+{FALSE}{0}
+{TRUE}{1}
+\qstop
 
 \qstart{When was Jesus of Nazareth resurrected?}
 {9 April 30 A.D.}{1}
@@ -3967,13 +4106,6 @@
 
 \qpaper{196}{The Faith of Jesus}
 
-\qstart{How many siblings did Jesus have (including Amos, who died at an early age)?}
-{8}{1}
-{5}{0}
-{4}{0}
-{none}{0}
-\qstop
-
 \qstart{How old was Jesus when he left his family home?}
 {16}{0}
 {21}{0}
@@ -3981,122 +4113,9 @@
 {30}{0}
 \qstop
 
-\qstart{How old was Jesus when he was crucified?}
-{30 years}{0}
-{33 years}{0}
-{35 years}{1}
-{36 years}{0}
-{40 years}{0}
-\qstop
-
-\qstart{From whom did Jesus require to give up their wordly goods?}
-{The 12 Apostles and the 70 specially trained gospel preachers}{1}
-{All his disciples}{0}
-{He left the decision to the individual}{0}
-\qstop
-
-\qstart{How old was Jesus when he received his Thought Adjuster?}
-{4 years}{1}
-{16 years}{0}
-{6 months}{0}
-{30 years}{0}
-{18 years}{0}
-\qstop
-
-\qstart{Do the spirits of the departed come back to the planet of their origin to communicate with their loved ones?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{In which of Jesus' talks did he say ``matter and spirit, and the state intervening them are 3 interrelated levels of the true unity of the real universe''?}
-{The Science Discourse}{1}
-{Discourse on Reality}{0}
-{Discourse on Time and Space}{0}
-\qstop
-
-\qstart{Prior to Jesus' arrest and in response to Jesus' prayers in the garden of Gethsemane a mighty angel came down by his side and, speaking to him, touched him and strengthened him. TRUE or FALSE?}
-{TRUE}{1}
-{FALSE}{0}
-\qstop
-
-\qstart{Was the torture and murder of Jesus by the Jews part of the Father's will?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Which event is described here: ``All of Golgotha was covered by thousands upon thousands of crosses upon which day by day there perished the flower of the Jewish race. A terrible harvest of the seed-sowing of this day [of Jesus' crucifixion]''?}
-{The Roman siege of Jerusalem 40 years after crucificion}{1}
-{The Babylonian siege leading to the Jews captivity}{0}
-\qstop
-
-\qstart{Why did the sky darken from midday on the day of Jesus' crucificion?}
-{God's anger}{0}
-{A hot wind sandstorm from Arabian desert was coming}{1}
-{solar eclipse}{0}
-\qstop
-
-\qstart{Who carried Jesus' body for burial?}
-{Joseph of Arimathea}{1}
-{Nicodemus}{1}
-{John Zebedee}{1}
-{A Roman centurion}{1}
-\qstop
-
-\qstart{Which of these women returned to Jesus' tomb after Sabbath to properly embalm him?}
-{Mary Magdalene}{1}
-{Mary Alpheus}{1}
-{Salome Zebedee}{1}
-{Joanna}{1}
-{Susanna}{1}
-{Mary the mother of Jesus}{0}
-\qstop
-
-\qstart{How many guards were placed around Jesus' tomb?}
-{10 Roman soldiers and 10 Jewish guards}{1}
-{8 Roman guards}{0}
-{5 Roman guards and 3 Jewish guards}{0}
-{a Roman cohort}{0}
-{a Roman legion}{0}
-\qstop
-
-\qstart{How many stones were set in front of Jesus' tomb to stop his followers taking his body?}
-{2}{1}
-{7}{0}
-{10}{0}
-{12}{0}
-{24}{0}
-\qstop
-
-\qstart{Who rolled away Jesus' tombstone?}
-{Secondary Midwayers}{1}
-{The resurrected Jesus}{0}
-{Seraphim}{0}
-{Primary Midwayers}{0}
-{Melchizedeks}{0}
-\qstop
-
-\qstart{What did the guards see immediately after Jesus resurrected? }
-{Nothing but the stone moving by itself}{1}
-{Jesus walking out of the tomb}{0}
-{Mighty angels moving the stone away}{0}
-\qstop
-
-\qstart{How many appearances in total did Jesus make in morontia form?}
-{3}{0}
-{7}{0}
-{19}{1}
-{12}{0}
-{144}{0}
-\qstop
-
 \qstart{Why is Pentecost called thus?}
 {Greek word for the number 50}{1}
 {Greek word for the number 40}{0}
-\qstop
-
-\qstart{No special gift was bestowed upon the members of Jesus’ earthly family. Pentecost marked the end of special priesthoods and all belief in sacred families. TRUE or FALSE?}
-{TRUE}{1}
-{FALSE}{0}
 \qstop
 
 \qstart{When did Urantia's complete (planetary) dispensational roll calls (resurrections) take place?}
@@ -4106,12 +4125,6 @@
 {All three}{1}
 \qstop
 
-\qstart{Who else was resurrected at the time of Jesus' resurrection?}
-{The two thieves crucified with him}{0}
-{The survivors of the human races since the days of Adam}{1}
-{One of the two thieves crucified with him}{0}
-\qstop
-
 \qstart{What did Jesus promise to send to mankind after his ascension to the Father?}
 {Spirit of Truth}{0}
 {Return to the world himself}{0}
@@ -4119,8 +4132,8 @@
 \qstop
 
 \qstart{Can demoniacal possession occur since the day of Pentecost?}
-{no}{1}
 {yes}{0}
+{no}{1}
 \qstop
 
 \qstart{Why was Moses not permitted to ``go to the other side'' (i.e. be resurrected on the mansion world)?}
