Sort a few more questions into the relevant papers.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -614,6 +614,14 @@
 
 \qpaper{11}{The Eternal Isle of Paradise}
 
+\qstart{How many outer space levels are there?}
+{3}{0}
+{4}{1}
+{7}{0}
+{12}{0}
+{1}{0}
+\qstop
+
 \qstart{Which area of the upper Paradise does the Father reside in?}
 {Deity presence}{1}
 {Most Holy Sphere}{0}
@@ -759,6 +767,41 @@
 
 \qpaper{12}{The Universe of Universes}
 
+\qstart{Why is there no universal time unit based on motion?}
+{because the totality of space respiration destroys the local value of Paradise-Havona standard day as a time source}{1}
+{because time is relative, depending on the moving observer's frame of reference}{0}
+\qstop
+
+\qstart{As the mind of any personality in the universe becomes more spiritual, how is its response to material gravity affected?}
+{becomes more responsive}{0}
+{is not affected}{0}
+{becomes less responsive}{1}
+\qstop
+
+\qstart{What is the only reality in the universe that can interassociate the physical forces and energies of the material level with the spiritual powers and beings of the spirit level?}
+{morontia}{0}
+{spirit}{0}
+{mind}{1}
+{space}{0}
+{matter}{0}
+\qstop
+
+\qstart{Do the beings arriving on Paradise have to become unconscious during the transit through the motionless midspace zones separating pervaded space from unpervaded?}
+{yes, during every trip to Paradise}{0}
+{no, never}{0}
+{yes, but only if the transit is to culminate in Paradise citizenship (as opposed to mere visitors who remain creatures of time)}{1}
+\qstop
+
+\qstart{Does consciousness of time exist without motion in space?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{Is time itself a genetic quality of mind?}
+{yes}{0}
+{no}{1}
+\qstop
+
 \qstart{Does time come by virtue of motion or because mind is inherently aware of sequentiality?}
 {by virtue of motion}{0}
 {because mind is inherently aware of sequentiality}{0}
@@ -776,6 +819,74 @@
 {inside}{0}
 {outside}{1}
 {exactly on the border}{0}
+\qstop
+
+\qstart{The absolute of time is eternity and the absolute of space is...}
+{we do not know}{1}
+{infinite and unlimited space}{0}
+\qstop
+
+\qstart{Are time and space inseparable?}
+{only in the seven superuniverses}{1}
+{in the entire master universe}{0}
+\qstop
+
+\qstart{Which types of space motion are absolute?}
+{space respiration}{1}
+{alternate directional swings of the successive space levels}{1}
+{compensatory or correlating movement}{0}
+\qstop
+
+\qstart{Is personality gravity computable?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{How much of the mind gravity is focused in the existing grand universe?}
+{1\%}{0}
+{10\%}{0}
+{50\%}{0}
+{60\%}{0}
+{85\%}{1}
+{95\%}{0}
+\qstop
+
+\qstart{How much of the mind gravity is focused in the creations of the outer space levels?}
+{1\%}{0}
+{10\%}{0}
+{15\%}{1}
+{25\%}{0}
+{60\%}{0}
+{80\%}{0}
+\qstop
+
+\qstart{How much of the cosmic-gravity action of the Isle of Paradise is engaged in controlling material systems beyond the borders of the present organized universes?}
+{95\%}{1}
+{1\%}{0}
+{50\%}{0}
+{25\%}{0}
+{85\%}{0}
+\qstop
+
+\qstart{Which of these are the absolute gravity circuits in the master universe?}
+{The Personality Gravity of the Universal Father}{1}
+{The Spirit Gravity of the Eternal Son}{1}
+{The Mind Gravity of the Conjoint Actor}{1}
+{The Cosmic Gravity of the Isle of Paradise}{1}
+{The Linear Gravity of the electronic stage of matter organization}{0}
+\qstop
+
+\qstart{Are the four absolute gravity circuits independent of time and space?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{How much of the spirit gravity is functioning in the grand universe?}
+{100\%}{1}
+{50\%}{0}
+{25\%}{0}
+{95\%}{0}
+{75\%}{0}
 \qstop
 
 \qpaper{13}{The Sacred Spheres of Paradise}
@@ -1830,6 +1941,20 @@
 \qstop
 
 \qpaper{52}{Planetary Mortal Epochs}
+
+\qstart{Why was Moses not permitted to ``go to the other side'' (i.e. be resurrected on the mansion world)?}
+{because the fallen Planetary Prince Caligastia was contesting such a deliverance}{1}
+{because he was a secret sinner}{0}
+{because the resurrection hall on Mansonia One was not yet cinstructed}{0}
+\qstop
+
+\qstart{Since what event do the Urantia mortals may proceed directly to the morontia spheres after death?}
+{Pentecost}{1}
+{Jesus's birth}{0}
+{Jesus's crucifixion}{0}
+{Jesus's resurrection}{0}
+{Jesus's baptism}{0}
+\qstop
 
 \qpaper{53}{The Lucifer Rebellion}
 
@@ -3144,6 +3269,11 @@
 
 \qpaper{108}{Mission and Ministry of Thought Adjusters}
 
+\qstart{Prior to the day of Pentecost, Thought Adjusters have been universally bestowed upon all normal minds of mortal status on Urantia. TRUE or FALSE?}
+{TRUE}{0}
+{FALSE}{1}
+\qstop
+
 \qpaper{109}{Relation of Adjusters to Universe Creatures}
 
 \qstart{Did Jesus have a Thought Adjuster?}
@@ -3495,6 +3625,13 @@
 
 \qpaper{129}{The Later Adult Life of Jesus}
 
+\qstart{How old was Jesus when he left his family home?}
+{16}{0}
+{21}{0}
+{27}{1}
+{30}{0}
+\qstop
+
 \qstart{In what capacity did Jesus travel the Mediterranean with Gonod and Ganid?}
 {Guide}{0}
 {Interpreter and tutor}{1}
@@ -3612,6 +3749,12 @@
 
 \qpaper{136}{Baptism and the Forty Days}
 
+\qstart{Why did Jesus destroy all his writings and anything material associated with his life?}
+{To avoid superstitious relic worshipping}{1}
+{He didn't produce any writings}{0}
+{He did leave writings which were destroyed by the priests}{0}
+\qstop
+
 \qstart{How old was Jesus when he was baptised by John the Baptist?}
 {31 years}{1}
 {33 years}{0}
@@ -3672,6 +3815,14 @@
 
 \qpaper{138}{Training the Kingdom’s Messengers}
 
+\qstart{How many of Jesus's apostles were fishermen?}
+{none}{0}
+{3}{0}
+{6--7}{1}
+{10}{0}
+{all 12}{0}
+\qstop
+
 \qpaper{139}{The Twelve Apostles}
 
 \qstart{How many of his Apostles did Jesus personally select?}
@@ -3729,6 +3880,11 @@
 
 \qpaper{145}{Four Eventful Days at Capernaum}
 
+\qstart{Can demoniacal possession occur since the day of Pentecost?}
+{yes}{0}
+{no}{1}
+\qstop
+
 \qpaper{146}{First Preaching Tour of Galilee}
 
 \qpaper{147}{The Interlude Visit to Jerusalem}
@@ -3773,6 +3929,12 @@
 \qpaper{162}{At the Feast of Tabernacles}
 
 \qpaper{163}{Ordination of the Seventy at Magadan}
+
+\qstart{Who were the women's evangelistic corps?}
+{10 (later 12) women selected and commissioned by Jesus to teach the gospel of the kingdom and to minister to the sick}{1}
+{24 speciallly selected members of the apostles' families}{0}
+{12 wives of the 12 apostles}{0}
+\qstop
 
 \qstart{From whom did Jesus require to give up their wordly goods?}
 {The 12 Apostles and the 70 specially trained gospel preachers}{1}
@@ -3836,6 +3998,12 @@
 {25\%}{0}
 \qstop
 
+\qstart{What did Jesus promise to send to mankind after his ascension to the Father?}
+{Spirit of Truth}{0}
+{Return to the world himself}{0}
+{Both}{1}
+\qstop
+
 \qpaper{177}{Wednesday, the Rest Day}
 
 \qpaper{178}{Last Day at the Camp}
@@ -3847,14 +4015,36 @@
 {no}{0}
 \qstop
 
-\qstart{Did the Last Supper replace the ceremony of The Passover?}
+\qstart{Did the Last Supper replace the Passover remembrance of the emergence of the Hebrews from racial slavery with the emergence of the enslaved individual from the bondage of ceremonialism?}
 {yes}{1}
 {no}{0}
+\qstop
+
+\qstart{At the Last Supper, which seat did Judas Iscariot take?}
+{the seat of honour on the left of Jesus}{1}
+{the seat of honour on the right of Jesus}{0}
+{the seat furthest from Jesus}{0}
+{a spare seat without any preference}{0}
+\qstop
+
+\qstart{At the Last Supper, which seat did John Zebedee take?}
+{the seat of honour on the left of Jesus}{0}
+{the seat of honour on the right of Jesus}{1}
+{the seat furthest from Jesus}{0}
+{a spare seat without any preference}{0}
 \qstop
 
 \qpaper{180}{The Farewell Discourse}
 
 \qpaper{181}{Final Admonitions and Warnings}
+
+\qstart{Which disciple did Jesus instruct to remain close at hand from his arrest until the very end of the crucifixion?}
+{Peter}{0}
+{John Zebedee}{1}
+{James}{0}
+{Matthew}{0}
+{Thomas}{0}
+\qstop
 
 \qpaper{182}{In Gethsemane}
 
@@ -3863,6 +4053,20 @@
 {primary midwayer}{0}
 {mighty angel}{1}
 {Melchizedek}{0}
+\qstop
+
+\qstart{Which 3 apostles did Jesus ask to stay with him whilst he prayed in the garden of Gethsemane?}
+{Peter, James \&\ John}{1}
+{Peter, John \&\ Andrew}{0}
+{Matthew Levi, Thomas \&\ Nathaniel}{0}
+{James, John \&\ Judas Iscariot}{0}
+{Judas Iscariot \&\ Alpheus twins}{0}
+\qstop
+
+\qstart{In his prayer in the garden of Gethsemane, Jesus said ``If this cup may not pass, then would I drink it. Not my will, but yours, be done''. Why did God desire Jesus to ``drink this cup''?}
+{To have the mortal experience from birth to natural death and the resurrection of the morontia}{1}
+{To be an example to mankind on how to live and die}{0}
+{To fulfill that which is written in the Hebrew Scriptures}{0}
 \qstop
 
 \qstart{To whom did Jesus say: ``The spirit is indeed willing, but the flesh is weak''?}
@@ -3879,6 +4083,13 @@
 \qstop
 
 \qpaper{183}{The Betrayal and Arrest of Jesus}
+
+\qstart{Why was John Zebedee permitted to remain near Jesus all the way through his trying experiences?}
+{Roman law allowed prisoners to have a friend stand with him before the judgement bar}{1}
+{A working of God}{0}
+{Because he was a friend of high priest}{0}
+{Because he was a relative of Annas}{0}
+\qstop
 
 \qstart{Was the torture and murder of Jesus by the Jews part of the Father's will?}
 {yes}{0}
@@ -3964,6 +4175,13 @@
 {40 years}{0}
 \qstop
 
+\qstart{How far from the ground were the Master's feet whilst on the cross?}
+{0.56m}{0}
+{1m}{1}
+{2m}{0}
+{3m}{0}
+\qstop
+
 \qstart{Give the time of Jesus' crucifixion and the time at which he died}
 {09:00 and 15:00}{1}
 {12:00 and 18:00}{0}
@@ -3981,6 +4199,12 @@
 {The Phoenicians}{1}
 {The Jews}{0}
 {The Armenians}{0}
+\qstop
+
+\qstart{Who wrote the small white board to go above the head of Jesus on the cross and what did it say?}
+{Pilate. ``Jesus of Nazareth --- the King of the Jews''. In Latin, Greek \&\ Aramaic}{1}
+{Pilate. ``Traitor''. In Latin}{0}
+{Annas \&\ Caiaphas. ``He said he is the King of the Jews''. In Hebrew}{0}
 \qstop
 
 \qstart{Which of these were at the foot of Jesus's cross during crucifixion?}
@@ -4001,7 +4225,22 @@
 {A Roman centurion}{1}
 \qstop
 
+\qstart{What was the last conscious thought of the human Jesus dying on the cross?}
+{repetition of a portion of the Boom of Psalms now known as Psalms \#20, \#21 and \#22}{1}
+{memories of his mother Mary}{0}
+{memories of his brothers}{0}
+{anxiety and fear about the future of Christianity}{0}
+{fear about the future of the apostles}{0}
+\qstop
+
 \qpaper{188}{The Time of the Tomb}
+
+\qstart{Why was Jesus buried in haste?}
+{Because it was the Sabbath and preparations were on for the week of Passover}{1}
+{It was the Jewish custom}{0}
+{It was dark}{0}
+{It was the Roman custom}{0}
+\qstop
 
 \qstart{How many stones were set in front of Jesus' tomb to stop his followers taking his body?}
 {2}{1}
@@ -4021,6 +4260,28 @@
 \qstop
 
 \qpaper{189}{The Resurrection}
+
+\qstart{What happened to the body of Jesus after his resurrection?}
+{removed from the planet by the angels}{0}
+{taken by the Jews and thrown into the pit for criminals}{0}
+{dissolved by the technique of dematerialization by the angels}{0}
+{stolen by the Apostles and burried privately}{0}
+{dissolved by the process of accelerated time by the angels}{1}
+{moved to Echmiadzin where it is now kept secretly}{0}
+\qstop
+
+\qstart{What was left in the tomb after the resurrection of Jesus?}
+{Nothing, it was empty}{0}
+{Linen sheet}{0}
+{Napkin, bandages, and a linen sheet}{1}
+\qstop
+
+\qstart{When did Urantia's complete (planetary) dispensational roll calls (resurrections) take place?}
+{At the arrival of the Planetary Prince}{0}
+{At the time of Adam}{0}
+{At the mortal transit of Jesus}{0}
+{All three}{1}
+\qstop
 
 \qstart{Which of these women returned to Jesus' tomb after Sabbath to properly embalm him?}
 {Mary Magdalene}{1}
@@ -4080,6 +4341,11 @@
 
 \qpaper{194}{Bestowal of the Spirit of Truth}
 
+\qstart{Why is Pentecost called thus?}
+{Greek word for the number 50}{1}
+{Greek word for the number 40}{0}
+\qstop
+
 \qstart{No special gift was bestowed upon the members of Jesus’ earthly family. Pentecost marked the end of special priesthoods and all belief in sacred families. TRUE or FALSE?}
 {FALSE}{0}
 {TRUE}{1}
@@ -4106,107 +4372,9 @@
 
 \qpaper{196}{The Faith of Jesus}
 
-\qstart{How old was Jesus when he left his family home?}
-{16}{0}
-{21}{0}
-{27}{1}
-{30}{0}
-\qstop
-
-\qstart{Why is Pentecost called thus?}
-{Greek word for the number 50}{1}
-{Greek word for the number 40}{0}
-\qstop
-
-\qstart{When did Urantia's complete (planetary) dispensational roll calls (resurrections) take place?}
-{At the arrival of the Planetary Prince}{0}
-{At the time of Adam}{0}
-{At the mortal transit of Jesus}{0}
-{All three}{1}
-\qstop
-
-\qstart{What did Jesus promise to send to mankind after his ascension to the Father?}
-{Spirit of Truth}{0}
-{Return to the world himself}{0}
-{Both}{1}
-\qstop
-
-\qstart{Can demoniacal possession occur since the day of Pentecost?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Why was Moses not permitted to ``go to the other side'' (i.e. be resurrected on the mansion world)?}
-{because the fallen Planetary Prince Caligastia was contesting such a deliverance}{1}
-{because he was a secret sinner}{0}
-{because the resurrection hall on Mansonia One was not yet cinstructed}{0}
-\qstop
-
-\qstart{Since what event do the Urantia mortals may proceed directly to the morontia spheres after death?}
-{Pentecost}{1}
-{Jesus's birth}{0}
-{Jesus's crucifixion}{0}
-{Jesus's resurrection}{0}
-{Jesus's baptism}{0}
-\qstop
-
-\qstart{Prior to the day of Pentecost, Thought Adjusters have been universally bestowed upon all normal minds of mortal status on Urantia. TRUE or FALSE?}
-{TRUE}{0}
-{FALSE}{1}
-\qstop
-
-\qstart{How many outer space levels are there?}
-{3}{0}
-{4}{1}
-{7}{0}
-{12}{0}
-{1}{0}
-\qstop
-
-\qstart{Did the Last Supper replace the Passover remembrance of the emergence of the Hebrews from racial slavery with the emergence of the enslaved individual from the bondage of ceremonialism?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{At the Last Supper, which seat did Judas Iscariot take?}
-{the seat of honour on the left of Jesus}{1}
-{the seat of honour on the right of Jesus}{0}
-{the seat furthest from Jesus}{0}
-{a spare seat without any preference}{0}
-\qstop
-
-\qstart{At the Last Supper, which seat did John Zebedee take?}
-{the seat of honour on the left of Jesus}{0}
-{the seat of honour on the right of Jesus}{1}
-{the seat furthest from Jesus}{0}
-{a spare seat without any preference}{0}
-\qstop
-
-\qstart{Which 3 apostles did Jesus ask to stay with him whilst he prayed in the garden of Gethsemane?}
-{Peter, James \&\ John}{1}
-{Peter, John \&\ Andrew}{0}
-{Matthew Levi, Thomas \&\ Nathaniel}{0}
-{James, John \&\ Judas Iscariot}{0}
-{Judas Iscariot \&\ Alpheus twins}{0}
-\qstop
-
-\qstart{In his prayer in the garden of Gethsemane, Jesus said ``If this cup may not pass, then would I drink it. Not my will, but yours, be done''. Why did God desire Jesus to ``drink this cup''?}
-{To have the mortal experience from birth to natural death and the resurrection of the morontia}{1}
-{To be an example to mankind on how to live and die}{0}
-{To fulfill that which is written in the Hebrew Scriptures}{0}
-\qstop
-
 \qstart{Are all seraphic guardians called destiny guardians?}
 {yes}{0}
 {no}{1}
-\qstop
-
-\qstart{Which disciple did Jesus instruct to remain close at hand from his arrest until the very end of the crucifixion?}
-{Peter}{0}
-{John Zebedee}{1}
-{James}{0}
-{Matthew}{0}
-{Thomas}{0}
 \qstop
 
 \qstart{Throughout Jesus' trials and crucifixion which two brothers played a leading role in relaying messages to Jesus' family, apostles and chief disciples?}
@@ -4216,54 +4384,6 @@
 {James \&\ John Zebedee}{0}
 \qstop
 
-\qstart{How many of Jesus's apostles were fishermen?}
-{6-7}{1}
-{3}{0}
-{10}{0}
-{all 12}{0}
-{none}{0}
-\qstop
-
-\qstart{Why was John Zebedee permitted to remain near Jesus all the way through his trying experiences?}
-{Roman law allowed prisoners to have a friend stand with him before the judgement bar}{1}
-{A working of God}{0}
-{Because he was a friend of high priest}{0}
-{Because he was a relative of Annas}{0}
-\qstop
-
-\qstart{Who wrote the small white board to go above the head of Jesus on the cross and what did it say?}
-{Pilate. ``Jesus of Nazareth - the King of the Jews''. In Latin, Greek \&\ Aramaic}{1}
-{Pilate. ``Traitor''. In Latin}{0}
-{Annas \&\ Caiaphas. ``He said he is the King of the Jews''. In Hebrew}{0}
-\qstop
-
-\qstart{How far from the ground were the Master's feet whilst on the cross?}
-{1m}{1}
-{2m}{0}
-{4m}{0}
-\qstop
-
-\qstart{Why did Jesus destroy all his writings and anything material associated with his life?}
-{To avoid superstitious relic worshipping}{1}
-{He didn't produce any writings}{0}
-{He did leave writings which were destroyed by the priests}{0}
-\qstop
-
-\qstart{What was the last conscious thought of the human Jesus dying on the cross?}
-{repetition of a portion of the Boom of Psalms now known as Psalms \#20, \#21 and \#22}{1}
-{memories of his mother Mary}{0}
-{memories of his brothers}{0}
-{anxiety and fear about the future of Christianity}{0}
-{fear about the future of the apostles}{0}
-\qstop
-
-\qstart{Why was Jesus buried in haste?}
-{Because it was the Sabbath and preparations were on for the week of Passover}{1}
-{It was the Jewish custom}{0}
-{It was dark}{0}
-{It was the Roman custom}{0}
-\qstop
-
 \qstart{Is the morontia form spiritual or material?}
 {neither (it is an intermediate stage between them)}{1}
 {spiritual}{0}
@@ -4271,130 +4391,10 @@
 {combination of both}{0}
 \qstop
 
-\qstart{What was left in the tomb after the resurrection of Jesus?}
-{Napkin, bandages, and a linen sheet}{1}
-{Linen sheet}{0}
-{It was empty}{0}
-\qstop
-
 \qstart{When was the Spirit of Truth bestowed upon Urantia?}
 {18 May 30 A.D.}{1}
 {16 May 30 A.D.}{0}
 {28 May 30 A.D.}{0}
-\qstop
-
-\qstart{As the mind of any personality in the universe becomes more spiritual, how is its response to material gravity affected?}
-{becomes more responsive}{0}
-{is not affected}{0}
-{becomes less responsive}{1}
-\qstop
-
-\qstart{What is the only reality in the universe that can interassociate the physical forces and energies of the material level with the spiritual powers and beings of the spirit level?}
-{mind}{1}
-{morontia}{0}
-{spirit}{0}
-{matter}{0}
-\qstop
-
-\qstart{Do the beings arriving on Paradise have to become unconscious during the transit through the motionless midspace zones separating pervaded space from unpervaded?}
-{yes, during every trip to Paradise}{0}
-{no, never}{0}
-{yes, but only if the transit is to culminate in Paradise citizenship (as opposed to mere visitors who remain creatures of time)}{1}
-\qstop
-
-\qstart{Does consciousness of time exist without motion in space?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{Is time itself a genetic quality of mind?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Who were the Women's Evangelistic Corps?}
-{10 (later 12) women selected and commissioned by Jesus to teach the gospel of the kingdom and to minister to the sick}{1}
-{24 speciallly selected members of the apostles' families}{0}
-\qstop
-
-\qstart{What happened to the body of Jesus after his resurrection?}
-{dissolved by the process of accelerated time by the angels}{1}
-{removed from the planet by the angels}{0}
-{taken by the Hebrews and thrown into the pit for criminals}{0}
-{dissolved by the technique of dematerialization by the angels}{0}
-{stolen by the Apostles and burried privately}{0}
-{moved to Vatican where it is now kept secretly}{0}
-\qstop
-
-\qstart{Why is there no universal time unit based on motion?}
-{because the totality of space respiration destroys the local value of Paradise-Havona standard day as a time source}{1}
-{because time is relative, depending on the moving observer's frame of reference}{0}
-\qstop
-
-\qstart{The absolute of time is eternity and the absolute of space is...}
-{we do not know}{1}
-{infinite and unlimited space}{0}
-\qstop
-
-\qstart{Are time and space inseparable?}
-{only in the seven superuniverses}{1}
-{in the entire master universe}{0}
-\qstop
-
-\qstart{Which types of space motion are absolute?}
-{space respiration}{1}
-{alternate directional swings of the successive space levels}{1}
-{compensatory or correlating movement}{0}
-\qstop
-
-\qstart{Is personality gravity computable?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{How much of the mind gravity is focused in the existing grand universe?}
-{85\%}{1}
-{50\%}{0}
-{60\%}{0}
-{1\%}{0}
-{10\%}{0}
-\qstop
-
-\qstart{How much of the mind gravity is focused in the creations of the outer space levels?}
-{15\%}{1}
-{25\%}{0}
-{1\%}{0}
-{10\%}{0}
-{60\%}{0}
-\qstop
-
-\qstart{How much of the cosmic-gravity action of the Isle of Paradise is engaged in controlling material systems beyond the borders of the present organized universes?}
-{95\%}{1}
-{1\%}{0}
-{50\%}{0}
-{25\%}{0}
-{85\%}{0}
-\qstop
-
-\qstart{Which of these are the absolute gravity circuits in the master universe?}
-{The Personality Gravity of the Universal Father}{1}
-{The Spirit Gravity of the Eternal Son}{1}
-{The Mind Gravity of the Conjoint Actor}{1}
-{The Cosmic Gravity of the Isle of Paradise}{1}
-{The Linear Gravity of the electronic stage of matter organization}{0}
-\qstop
-
-\qstart{Are the four absolute gravity circuits independent of time and space?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{How much of the spirit gravity is functioning in the grand universe?}
-{100\%}{1}
-{50\%}{0}
-{25\%}{0}
-{95\%}{0}
-{75\%}{0}
 \qstop
 
 \qstart{Which of these are the units of supergovernment in the Grand Universe?}
