Use for Goudy for title text.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -45,7 +45,8 @@
 
 \tunemarkup{garamond}{%
 \def\urantiamainfont{Garamond Premier Pro}
-\def\urantiaparttitlefont{Garamond Premier Pro Semibold Display}
+%\def\urantiaparttitlefont{Garamond Premier Pro Semibold Display}
+\def\urantiaparttitlefont{GoudyHandtooled BT}
 \def\urantiatitlefont{Garamond Premier Pro Semibold Display}
 \def\urantiaheaderfont{Garamond Premier Pro Medium Subhead}
 \def\urantiaheadingfont{Arial Narrow Bold}
@@ -527,7 +528,7 @@
 
 \newcommand{\hsetoff}{\hspace*{1em}}
 \newcommand{\vsetspace}{\vspace{1ex}}
-\newcommand{\bibcovertitlefont}{\parttitlefont\fontsize{18}{18}\selectfont\addfontfeature{LetterSpace=2.0,WordSpace=1.5}}
+\newcommand{\bibcovertitlefont}{\parttitlefont\fontsize{18}{18}\selectfont\addfontfeature{LetterSpace=2.0}}
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{8}{8}\selectfont#1}}\kern0.2em\relax}
 
 \tunemarkup{nofnt}{%
