Adjust a few font sizes

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -22,7 +22,7 @@
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{12.8}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{15.5}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
 THE BRITISH STUDY EDITION\\
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
@@ -34,20 +34,14 @@ THE BRITISH STUDY EDITION\\
 \tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{18.5}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{21}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{20}{20}\selectfont}
 \urantiabook\\
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
-{\itshape ALSO KNOWN AS}\\[1ex]
-\tunemarkup{pghanlin}{\fontsize{15}{20}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{18}{20}\selectfont}
-\tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
-\tunemarkup{pgnexus7}{\fontsize{15}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{18}{20}\selectfont}
-``THE URANTIA BOOK''\\
+\tunemarkup{pgkoboaurahd}{\fontsize{11.8}{20}\selectfont}
+{\itshape THE FIFTH EPOCHAL REVELATION}\\
 }%
 {%
 \vspace*{\stretch{0.1}}
