--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -24,22 +24,25 @@
 \tunemarkuptag{private}
 
 % comment out to disable pictures
-\tunemarkuptag{pictures}
+%\tunemarkuptag{pictures}
 
 % comment out to enable footnotes
-%\tunemarkuptag{nofnt}
+\tunemarkuptag{nofnt}
 
 % comment out to disable fancy lettrine letters
-\tunemarkuptag{fancylettrine}
+%\tunemarkuptag{fancylettrine}
 
 % comment out to disable Introduction
-\tunemarkuptag{introinclude}
+%\tunemarkuptag{introinclude}
 
 % comment out to enable fancy page decorations
 %\tunemarkuptag{nofancydecor}
 
 % comment out to disable cover image
 \tunemarkuptag{coverimage}
+
+% comment out to enable Cosmic Citizenship Quiz
+\tunemarkuptag{noquiz}
 
 \setdefaultlanguage{english}
 
@@ -249,12 +252,9 @@
 
 \newcommand{\quizsymbol}{\textcolor{ublinkcolor}{\usefont{U}{webo}{xl}{n}7}}
 
-\newcommand{\quizlink}{%
-  \par
-  \vspace*{\stretch{0.1}}%
-  \begin{center}\hyperlink{qc\thepaper}{\Huge\quizsymbol}\end{center}%
-  \vspace*{\stretch{0.9}}%
-}
+\newcommand{\quizlink}{\par\vspace*{\stretch{0.1}}\begin{center}\hyperlink{qc\thepaper}{\Huge\quizsymbol}\end{center}\vspace*{\stretch{0.9}}}%
+
+\tunemarkup{noquiz}{\def\quizlink{}}
 
 \newcommand{\titleframe}{%
 \begingroup
@@ -472,7 +472,7 @@
   \@answers
 }
 
-\tunemarkuptwo{pgkindledx}{}{%
+\tunemarkuptwo{noquiz}{}{%
 \AtEndDocument{%
 \newcount\pqcounter
 \pqcounter=0
