--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -10,7 +10,7 @@
 \pagestyle{fancy}
 \tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
-\tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
+%\tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 %\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
@@ -213,5 +213,5 @@
 \include{tex/p194}
 \include{tex/p195}
 \include{tex/p196}
-\tunemarkuptwo{pgkindledx}{}{\include{tex/quiz}}
+\tunemarkuptwo{noquiz}{}{\include{tex/quiz}}
 \end{document}
